--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GastosPersonales" />
+        android:theme="@style/Theme.GastosPersonales">
+        <activity
+            android:name=".auth.SetPinActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".auth.PinActivity"
+            android:exported="false" />
+    </application>
 
 </manifest>
