--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity
             android:name=".auth.PinActivity"
             android:exported="false" />
+        <activity android:name=".activities.TransaccionActivity"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
